# ffmpeg-wrapper

./: .gitignore  CMakeLists.txt  README.md  code_bak  main.c
include/: x265_config.h
include/libavformat/: avformat.h
include/libavutil/: ffversion.h
include/libswscale/: swscale.h
lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  opus.pc  vpx.pc  x264.pc  x265.pc
